Fix Jokes overflow set Direction Column at Mobile version

--- a/src/style.scss
+++ b/src/style.scss
@@ -105,6 +105,9 @@ body {
   position: relative;
 
   &__Joke {
+    overflow: auto;
+    scrollbar-width: none;
+    text-overflow: ellipsis;
     color: $text-color;
     font-size: 1.5rem;
     padding: 3rem 1.5rem;
@@ -114,7 +117,9 @@ body {
     width: 50%;
     margin: 2rem 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+
     gap: 0.5rem;
   }
 }
@@ -170,6 +175,7 @@ body {
     }
     &__BtnContainer {
       margin: 0rem 0;
+      flex-direction: row;
     }
   }
   .Footer {
@@ -202,6 +208,9 @@ body {
     width: 80%;
     &__Joke {
       font-size: 2rem;
+    }
+    &__BtnContainer {
+      flex-direction: row;
     }
   }
   .Footer {
